# pyalgotask

./: .gitignore  LICENSE  MANIFEST.in  README.md  __main__.py  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
pyalgotask/: __init__.py  __settings.py  exceptions.py  export.py  language.py  main.py  structures.py
pyalgotask/input/: __init__.py  array.py  in_del_operators.py  input_base.py
pyalgotask/languages/: deDE.yaml  enUK.yaml
pyalgotask/output/: __init__.py  array.py  output_base.py  pylatex_classes.py  tree.py
pyalgotask/randomizer/: __init__.py  array.py  in_del_operators.py  parameter.py  randomizer_base.py
pyalgotask/structures/: binary_search_tree.py
pyalgotask/tasks/: __init__.py  task_base.py
pyalgotask/tasks/hashing/: __init__.py  closed_hashing.py  hashing_base.py  open_hashing.py
pyalgotask/tasks/sorting/: __init__.py  bubble.py  bucketsort.py  countingsort.py  heapsort.py  insertion.py  merge.py  quicksort.py  radixsort.py  selection.py  sorting_base.py
pyalgotask/tasks/trees/: __init__.py  avl_tree.py  binary_search_tree.py  binary_search_tree_structure.py  tree_base.py
src/pyalgotask/: __main__.py  __meta.py  language.py  structures.py
src/pyalgotask/input/: __init__.py  in_del_operators.py
src/pyalgotask/output/: __init__.py  array.py  output_base.py  pylatex_classes.py
src/pyalgotask/randomizer/: array.py  in_del_operators.py  parameters.py
src/pyalgotask/tasks/: __init__.py  task_base.py
src/pyalgotask/tasks/hashing/: closed_hashing.py  (+2 more)
tests/: test_hashing.py  test_sorting.py  test_tree.py
(+11 files in other folders)
